--- a/web/view/common/menu.html
+++ b/web/view/common/menu.html
@@ -23,7 +23,7 @@
                                 <a href="../controller/brandController.php?action=brandAddPrepare"><i class="fa fa-gg-circle"></i>品牌新增</a>
                             </li>
                             <li>
-                            <a href="../controller/brandController.php?action=brandList"><i class="fa fa-gg-circle"></i>品牌檢視/修改</a>
+                                <a href="../controller/brandController.php?action=brandList"><i class="fa fa-gg-circle"></i>品牌檢視/修改</a>
                             </li>
                         </ul>
                     </li>
@@ -122,7 +122,7 @@
                                     <i class="fa fa-file-image-o"></i>衛教文章新增</a>
                             </li>
                             <li>
-                                <a href="#">
+                                <a href="../controller/educationController.php?action=educationList">
                                     <i class="fa fa-file-image-o"></i>衛教文章檢視/修改</a>
                             </li>
                         </ul>
