--- a/web/view/statistic/articleClick.html
+++ b/web/view/statistic/articleClick.html
@@ -19,45 +19,16 @@
     <div class="wrapper">
         \{include file="../common/header.html"\} \{include file="../common/menu.html"\}
         <div class="content-wrapper">
+            \{if $msg == 'failure'\}
+            <div class="alert alert-warning alert-dismissable text-center">
+                <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+                <h4 style="display: inline;">\{$error\}</h4>
+            </div>
+            \{/if\}
             <section class="content-header">
                 <h1>文章點擊率</h1>
             </section>
             <section class="content">
-                <!-- <div class="row">
-                    <div class="col-md-12">
-                        <div class="box box-info" style="padding: 5px;">
-                            <div class="box-header with-border">
-                                <h3 class="box-title">篩選條件</h3>
-                            </div>
-                            <div class="box-body row">
-                                <div id="errDiv" class="form-group has-error" style="display: none;">
-                                    <label id="errMsg" class="col-sm-12">查無資料</label>
-                                </div>
-                                <div class="col-md-6 form-group">
-                                    <label class="control-label col-md-2" for="startDatePicker">開始日期</label>
-                                    <div class="input-group col-md-8">
-                                        <div class="input-group-addon">
-                                            <i class="fa fa-clock-o"></i>
-                                        </div>
-                                        <input type="text" class="form-control pull-right" id="startDatePicker">
-                                    </div>
-                                </div>
-                                <div class="col-md-6 form-group">
-                                    <label class="control-label col-md-2" for="endDatePicker">結束日期</label>
-                                    <div class="input-group col-md-8">
-                                        <div class="input-group-addon">
-                                            <i class="fa fa-clock-o"></i>
-                                        </div>
-                                        <input type="text" class="form-control pull-right" id="endDatePicker">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="box-footer">
-                                <button class="btn btn-success" onclick="query()">確定</button>
-                            </div>
-                        </div>
-                    </div>
-                </div> -->
                 <!-- Main content -->
                 <div class="row">
                     <div class="col-xs-12">
@@ -66,25 +37,21 @@
                                 <table id="manTable" class="row-border" cellspacing="0" style="width: 100%;">
                                     <thead>
                                         <tr>
-                                            <th>點擊率</th>
-                                            <th>文章標題</th>
+                                            <th>點閱數</th>
                                             <th>文章分類</th>
+                                            <th>文章標題</th>
                                             <th>文章內容</th>
                                         </tr>
                                     </thead>
                                     <tbody>
+                                        \{foreach from=$articleList item=article\}
                                         <tr>
-                                            <td>60%</td>
-                                            <td>隱形眼鏡</td>
-                                            <td>新知趨勢</td>
-                                            <td>研究顯示，每 100 個近視的人之中就有一個人戴著隱形眼鏡!</td>
+                                            <td>\{$article.ctr\}</td>
+                                            <td>\{$typeMap[$article.type]\}</td>
+                                            <td>\{$article.title\}</td>
+                                            <td>\{$article.content\}</td>
                                         </tr>
-                                        <tr>
-                                            <td>40%</td>
-                                            <td>粗框眼鏡</td>
-                                            <td>新知趨勢</td>
-                                            <td>研究顯示，每 100 個近視的人之中就有一個人戴著粗框眼鏡!</td>
-                                        </tr>
+                                        \{/foreach\}
                                     </tbody>
                                 </table>
                             </div>
