--- a/web/view/user/userAdd.html
+++ b/web/view/user/userAdd.html
@@ -3,30 +3,40 @@
 
 <head>
     \{include file="../common/resource.html"\}
-<script>
-$(document).ready(function() {
-    var allAccount = \{$allAccount|json_encode\};
-    $("#account").focusout(function(){
-        var repeatedAccount = false;
-        for(var i in allAccount){
-            if($(this).val() === allAccount[i]['account']){
-                repeatedAccount = true;
-            }
+    <!-- datepicker -->
+    <link rel="stylesheet" href="../theme/adminlte/plugins/datepicker/datepicker3.css">
+    <script src="../theme/adminlte/plugins/datepicker/bootstrap-datepicker.js"></script>
+    <script src="../theme/adminlte/plugins/datepicker/locales/bootstrap-datepicker.zh-TW.js"></script>
+    <script>
+        $(document).ready(function () {
+            var allAccount = \{ $allAccount| json_encode\ };
+            $("#account").focusout(function () {
+                var repeatedAccount = false;
+                for (var i in allAccount) {
+                    if ($(this).val() === allAccount[i]['account']) {
+                        repeatedAccount = true;
+                    }
 
-        }
-        if(repeatedAccount){
-            $("#repeatedAccountValidataion").removeClass("hidden");
-            $("button[type=submit]").attr('disabled', true);
+                }
+                if (repeatedAccount) {
+                    $("#repeatedAccountValidataion").removeClass("hidden");
+                    $("button[type=submit]").attr('disabled', true);
 
-        }
-    });
-    $("#account").focusin(function(){
-        $("#repeatedAccountValidataion").addClass("hidden");
-    });
+                }
+            });
 
+            $("#account").focusin(function () {
+                $("#repeatedAccountValidataion").addClass("hidden");
+            });
 
-});
-</script>
+            $('#birthdayPicker').datepicker({
+                language: 'zh-TW',
+                format: 'yyyy/mm/dd',
+                autoclose: true
+            });
+
+        });
+    </script>
 </head>
 
 <body class="hold-transition skin-yellow sidebar-mini">
@@ -39,7 +49,7 @@ $(document).ready(function() {
             <section class="content">
                 <div class="row">
                     <div class="col-md-6">
-                    <div class="box box-primary">
+                        <div class="box box-primary">
                             <div class="box-header with-border">
                                 <h3 class="box-title">新增使用者</h3>
                             </div>
@@ -67,14 +77,14 @@ $(document).ready(function() {
                                     </div>
 
                                     <!--birthday-->
-                                    <div id="birthdayDiv" class="form-group">
-                                        <label for="gender" class="col-sm-2 control-label">生日</label>
+                                    <div class="form-group">
+                                        <label class="control-label col-sm-2" for="birthdayPicker">生日</label>
                                         <div class="col-sm-10">
                                             <div class="input-group">
                                                 <div class="input-group-addon">
-                                                    <i class="fa fa-calendar"></i>
+                                                    <i class="fa fa-clock-o"></i>
                                                 </div>
-                                                <input type="text" class="form-control" data-inputmask="'alias': 'dd/mm/yyyy'" data-mask>
+                                                <input type="text" class="form-control pull-right" id="birthdayPicker">
                                             </div>
                                         </div>
                                     </div>
